--- a/share/gpodder/ui/adaptive/gpodderepisodeselector.ui
+++ b/share/gpodder/ui/adaptive/gpodderepisodeselector.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
+<!-- Generated with glade 3.40.0 -->
 <!--*- mode: xml -*-->
 <interface>
   <requires lib="gtk+" version="3.20"/>
@@ -123,7 +123,7 @@
                 <child>
                   <object class="GtkFlowBoxChild">
                     <property name="visible">True</property>
-                    <property name="can-focus">True</property>
+                    <property name="can-focus">False</property>
                     <child>
                       <object class="GtkLabel" id="labelTotalSize">
                         <property name="visible">True</property>
